[package]
name = "sputnik"
version.workspace = true
edition.workspace = true

[dependencies]
dom = { path = "../dom"}
html_parser = { path = "../html_parser"}
css_parser = { path = "../css_parser"}
layout = { path = "../layout"}

# FIXME: It should be possible to use our own arena_tree crate for this. 
typed-arena = "2.0.2"
